# stockfish-flutter-mobile

./: .gitignore  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/res/values/: attrs.xml
android/src/main/res/values-v31/: attrs.xml
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/ios/Flutter/ephemeral/: flutter_native_integration.env
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
ios/: stockfish.podspec
ios/stockfish/: Package.swift
ios/stockfish/Sources/stockfish/: ffi.cpp
ios/stockfish/Sources/stockfish/Stockfish/src/: stockfish_main.cpp
